This documents significant changes in the dev branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2022-09-01:

- Fixed a bug where 'command -x' would create a tracked alias for a command,
  causing 'whence' not to find an /opt/ast/bin built-in command correctly.

- Fixed a bug in the 'time' keyword where the default precision of a format
  specifier (e.g. %lU) was six instead of three, as documented.

2022-08-30:

- When printing a function definition, 'typeset -f function_name' now
  regenerates the code from the parse tree instead of dumping the literal
  code from the source file. This avoids corrupted or missing output if the
  source file is edited or (re)moved after loading the function. It also
  makes 'typeset -f' function as a code reformatter (AT&T indentation style).

- In the vi line editor, 'C' and 'c$' at the start of a line now enter insert
  mode instead of beeping, and 'I' jumps to the first non-blank character on
  the line instead of the start of the line. These changes are consistent
  with standard vi(1) behavior and with Bolsky & Korn (1995, p. 121).

- Aliases for many GNU long options have been added to the /opt/ast/bin
  built-in commands. Additionally, 'kill -s' now has a --signal long option
  alias compatible with the util-linux option.

- All of the /opt/ast/bin built-ins available in src/lib/libcmd (excluding
  vmstate if vmalloc isn't enabled) can now be enabled with the new
  SHOPT_ALL_LIBCMD setting in src/cmd/ksh93/SHOPT.sh.

2022-08-25:

- In the vi line editor, a bug was fixed that caused erratic behaviour after
  using the 0 or ^ commands when already at the beginning of the command line.

2022-08-24:

- Fixed a bug that caused ksh in the vi editor mode to crash or produce
  invalid completions if ESC = was used at the beginning of a line. Both